parse.c
#include "mycc.h"

// 現在着目しているトークン
Token *token;

// 入力プログラム文字列
char *user_input;

// プログラム全体の構文木(各要素は関数,グローバル変数,
//                  enum,struct,typedefの定義)
Node *code[1000];

// 現在の関数内のローカル変数及びプログラム全体でのリスト
LVar *locals;
LVar *LocalsList[1000];
int localsnum;
int localsnums[1000];
int scopelayer_now;
int localsnum_max;

// 文字列リテラルのリスト
Strs *strs;
int strsnum;

Constant *constants;       // enum定数のリスト
GVar *globals;             // グローバル変数のリスト
EnumName *enumnames;       // enum型名のリスト
StructDef *structdefs;     // struct型のリスト
DefinedType *definedtypes; // typedef型名のリスト

// エラーを報告するための関数
// printfと同じ引数を取る
void error(char *fmt) {
    fprintf(stderr, "%s\n", fmt);
    exit(1);
}
// void error(char *fmt, ...) {
// 	va_list ap;
// 	va_start(ap, fmt);
// 	vfprintf(stderr, fmt, ap);
// 	fprintf(stderr, "\n");
// 	exit(1);
// }

// エラーの起きた場所を報告するための関数
// 下のようなフォーマットでエラーメッセージを表示する
//
// foo.c:10: x = y + + 5;
//                   ^ 式ではありません
void error_at(char *loc, char *msg) {
    // locが含まれている行の開始地点と終了地点を取得
    char *line = loc;
    while (user_input < line && line[-1] != '\n')
        line--;

    char *end = loc;
    while (*end != '\n')
        end++;

    // 見つかった行が全体の何行目なのかを調べる
    int line_num = 1;
    char *p;
    for (p = user_input; p < line; p++)
        if (*p == '\n')
            line_num++;

    // 見つかった行を、ファイル名と行番号と一緒に表示
    int indent = fprintf(stderr, "%s:%d: ", filename, line_num);
    fprintf(stderr, "%.*s\n", (int)(end - line), line);

    // エラー箇所を"^"で指し示して、エラーメッセージを表示
    int pos = loc - line + indent;
    fprintf(stderr, "%*s", pos, ""); // pos個の空白を出力
    fprintf(stderr, "^ %s\n", msg);
    exit(1);
}

// 次のトークンが期待している記号のときには、トークンを1つ読み進めて
// 真を返す。それ以外の場合には偽を返す。
int consume(char *op) {
    if (token->kind != TK_RESERVED ||
        strlen(op) != token->len ||
        memcmp(token->str, op, token->len))
        return 0;
    token = token->next;
    return 1;
}

// consume_ident
Token *consume_kind(TokenKind tkind) {
    if (token->kind != tkind)
        return NULL;

    // 識別子の時は識別子自体を返せるようにする(次のトークンを返さない)
    Token *old = token;
    token = token->next;
    return old;
}

// 次のトークンが期待している記号のときには、トークンを1つ読み進める。
// それ以外の場合にはエラーを報告する。
char errmsgbuf[100];
void expect(char *op) {
    if (token->kind != TK_RESERVED ||
        strlen(op) != token->len ||
        memcmp(token->str, op, token->len)) {
        snprintf(errmsgbuf, sizeof(errmsgbuf), "'%s'ではありません", op);
        error_at(token->str, errmsgbuf);
    }
    token = token->next;
}

// 次のトークンが数値の場合、トークンを1つ読み進めてその数値を返す。
// それ以外の場合にはエラーを報告する。
// enum定数も数値として扱う
int expect_number() {
    Constant *cons = constants;
    for (; cons; cons = cons->next)
        if (cons->len == token->len && !memcmp(token->str, cons->name, cons->len))
            break;
    if (cons) {
        token = token->next;
        return cons->val;
    }

    if (token->kind != TK_NUM)
        error_at(token->str, "数値ではありません");
    int val = token->val;
    token = token->next;
    return val;
}

int at_eof() { // TODO:これ使ってない(NULLで判定してる→バグの可能性?)
    return token->kind == TK_EOF;
}

// 新しいトークンを作成してcurに繋げる
Token *new_token(TokenKind kind, Token *cur, char *str) {
    Token *tok = calloc(1, sizeof(Token));
    tok->kind = kind;
    tok->str = str;
    cur->next = tok;
    return tok;
}

// トークンを構成する文字かどうか
int is_alnum(char c) {
    return (c == '_') ||
        ('a' <= c && c <= 'z') ||
        ('A' <= c && c <= 'Z') ||
        ('0' <= c && c <= '9');
}

/*
 * ######## ##    ## ########  ########
 *    ##     ##  ##  ##     ## ##
 *    ##      ####   ##     ## ##
 *    ##       ##    ########  ######
 *    ##       ##    ##        ##
 *    ##       ##    ##        ##
 *    ##       ##    ##        ########
 *
 * ######## ##     ## ##    ##  ######   ######
 * ##       ##     ## ###   ## ##    ## ##    ##
 * ##       ##     ## ####  ## ##       ##
 * ######   ##     ## ## ## ## ##        ######
 * ##       ##     ## ##  #### ##             ##
 * ##       ##     ## ##   ### ##    ## ##    ##
 * ##        #######  ##    ##  ######   ######
 */

// https://www.sigbus.info/compilerbook#type
// Cの型は、先頭から次の4つの部分に分解することができます。
// 1.ベースの型
// 2.ポインタを表すアスタリスク
// 3.識別子か、カッコでくくられたネストした型
// 4.関数や配列を表すカッコ
// たとえばint xは、ベースの型はint、ポインタを表すアスタリスクはなし、
// 識別子はx、関数や配列のカッコはなし、という構成になっています。
// unsigned int *x()は、ベースの型はunsigned int、
// ポインタを表すアスタリスクは*、識別子はx、関数を表すカッコは()という構成です。
// void **(*x)()は、ベースの型はvoid、ポインタを表すアスタリスクは**、
// ネストした型は*x、関数を表すカッコは()、という構成です。

Node *consume_typed_ident(Type *prevtype) {
    // char name[100];
    // strncpy(name, token->str, 20);
    // fprintf(stderr, "### %s %p\n", name, prevtype);

    Token *first = token;
    Node *node = calloc(1, sizeof(Node));
    node->srctoken = token;
    node->kind = ND_TYPEDIDENT;

    // 1.ベースの型
    Type *type;
    Type *subtype = NULL;
    if (prevtype) // ネストした型の場合
        type = prevtype;
    else {
        type = calloc(1, sizeof(Type));
        int is_typefound = 0;
        if (consume_kind(TK_INT)) {
            type->ty = INT;
            is_typefound = 1;
        }
        if (consume_kind(TK_CHAR)) {
            type->ty = CHAR;
            is_typefound = 1;
        }
        if (consume_kind(TK_VOID)) {
            type->ty = VOID;
            is_typefound = 1;
        }

        if (consume_kind(TK_ENUM)) {
            EnumName *ename = find_enum(token);
            if (ename) {
                token = token->next;
                type->ty = INT;
                is_typefound = 1;
            } else {
                token = first;
                return NULL;
            }
        }

        if (consume_kind(TK_STRUCT)) {
            StructDef *strc = find_struct(token);
            if (strc) {
                token = token->next;
                type = strc->type;
                is_typefound = 1;
            } else {
                token = first;
                return NULL;
            }
        }

        DefinedType *dtype = find_dtype(token);
        if (dtype != NULL) {
            token = token->next;
            type = dtype->type;
            is_typefound = 1;
        }

        if (!is_typefound) {
            token = first;
            return NULL;
        }
    }

    // 2.ポインタを表すアスタリスク
    while (consume("*")) {
        Type *t = calloc(1, sizeof(Type));
        t->ty = PTR;
        t->ptr_to = type;
        type = t;
    }

    node->type = NULL;
    // 3.識別子か、カッコでくくられたネストした型
    if (consume("(")) {
        subtype = calloc(1, sizeof(Type));
        Node *nestednode = consume_typed_ident(subtype);
        if (!nestednode)
            error_at(token->str, "不正な型です");
        // type = nestednode->type;
        node->type = nestednode->type;
        node->name = nestednode->name;
        node->val = nestednode->val;
        consume(")");
    } else {
        Token *tok = consume_kind(TK_IDENT);
        // if (!tok) // 識別子がない→(sizeof()などの)型名としては正当
        //     error_at(token->str, "変数名がありません");
        if (tok) {
            node->name = tok->str;
            node->val = tok->len;
        } else {
            node->name = NULL;
            node->val = 0;
        }
    }

    int size = 1;
    // 4.関数や配列を表すカッコ

    if (consume("(")) { // 関数型
        Type *t = calloc(1, sizeof(Type));
        t->ty = FUNC;
        t->ptr_to = type;
        type = t;

        // while (!consume(")")) {
        for (;;) {
            if (token->next == NULL)
                error("関数の引数リストが閉じていません");
            if (consume(")"))
                break;
            Node *argnode = consume_typed_ident(NULL);
            Type *t2 = calloc(1, sizeof(Type));
            t2->ty = FUNCARG;
            t2->ptr_to = argnode->type;
            t2->name = argnode->name;
            t2->len = argnode->val;
            t->member = t2;
            t = t2;

            if (consume(")"))
                break;
            else
                expect(",");
        }
    } else {
        while (consume("[")) { // 配列型
            Type *t = calloc(1, sizeof(Type));
            t->ty = ARRAY;
            t->ptr_to = type;
            type = t;

            if (consume("]")) { // 配列要素数省略
                // TODO: 正しくは char a[][10]; (最初のみ省略)
                size = 0;
            } else {
                size = expect_number();
                expect("]");
            }
            t->array_size = size;
            // totalsize *= size;
        }
    }

    if (subtype) {
        subtype->ty = type->ty;
        subtype->ptr_to = type->ptr_to;
        subtype->array_size = type->array_size;
    }

    if (!node->type)
        node->type = type;

    // TODO:複数宣言に対応 int *x, *y;
    // fprintf(stderr, "### %d\n", node->type->ty);

    // Type *now = node->type;
    // while (now) {
    //     fprintf(stderr, "### %d\n", now->ty);
    //     now = now->ptr_to;
    // }

    // char name[100];
    // strncpy(name, node->name, node->val);
    // name[node->val] = 0;
    // fprintf(stderr, "### END %s\n", name);
    return node;
}

int is_typed_ident() {
    Token *first = token;
    Node *node = consume_typed_ident(NULL);
    token = first;
    return node != NULL;
}

Type *estimate_type(Node *node) {
    if (node == NULL)
        return NULL;
    return node->type;
}

int size_from_type(Type *type) {
    // TODO:ローカル変数の場合のサイズ
    int size = 4;
    if (type == NULL)
        return 4;
    if (type->ty == VOID)
        return 0;
    if (type->ty == INT)
        return 4;
    if (type->ty == CHAR)
        return 1;
    if (type->ty == PTR)
        return 8;

    if (type->ty == ARRAY) {
        int arrsize = type->array_size;
        Type *t = type->ptr_to;
        size = size_from_type(t) * arrsize;
    }

    if (type->ty == STRUCT) {
        size = 0;
        Type *tmp = type->member;
        while (tmp) {
            size += size_from_type(tmp->ptr_to);
            tmp = tmp->member;
        }
    }
    return size;
}

// 入力文字列pをトークナイズしてそれを返す
void tokenize() {
    char *p = user_input;
    Token *head = calloc(1, sizeof(Token));
    head->next = NULL;
    Token *cur = head;

    int is_linehead = 1;
    int linenumber = 1;
    while (*p) {
        if (*p == '\n') {
            is_linehead = 1;
            linenumber++;
            p++;
            continue;
        }

        // 空白文字をスキップ
        if (isspace(*p)) {
            p++;
            continue;
        }

        // 行コメントをスキップ
        if (strncmp(p, "//", 2) == 0) {
            p += 2;
            while (*p != '\n')
                p++;
            continue;
        }

        // ブロックコメントをスキップ
        if (strncmp(p, "/*", 2) == 0) {
            char *q = strstr(p + 2, "*/");
            if (!q)
                error_at(p, "コメントが閉じられていません");
            p = q + 2;
            continue;
        }

        if (*p == '"') { // 文字列リテラル
            // TODO:エスケープ
            char *q = p + 1;
            int isescaped = 0;
            while (isescaped || *q != '"') {
                if (isescaped)
                    isescaped = 0;
                else if (*q == '\\')
                    isescaped = 1;
                if (!*q)
                    error_at(p, "閉じられていない文字列リテラルです");
                q++;
            }
            cur = new_token(TK_QUOTE, cur, p + 1);
            cur->len = q - p - 1;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p = q + 1;
            continue;
        }

        if (strncmp(p, "return", 6) == 0 && !is_alnum(p[6])) {
            cur = new_token(TK_RETURN, cur, p);
            cur->len = 6;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 6;
            continue;
        }

        if (strncmp(p, "if", 2) == 0 && !is_alnum(p[2])) {
            cur = new_token(TK_IF, cur, p);
            cur->len = 2;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 2;
            continue;
        }

        if (strncmp(p, "else", 4) == 0 && !is_alnum(p[4])) {
            cur = new_token(TK_ELSE, cur, p);
            cur->len = 4;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 4;
            continue;
        }

        if (strncmp(p, "while", 5) == 0 && !is_alnum(p[5])) {
            cur = new_token(TK_WHILE, cur, p);
            cur->len = 5;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 5;
            continue;
        }

        if (strncmp(p, "for", 3) == 0 && !is_alnum(p[3])) {
            cur = new_token(TK_FOR, cur, p);
            cur->len = 3;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 3;
            continue;
        }

        if (strncmp(p, "break", 5) == 0 && !is_alnum(p[5])) {
            cur = new_token(TK_BREAK, cur, p);
            cur->len = 5;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 5;
            continue;
        }

        if (strncmp(p, "continue", 8) == 0 && !is_alnum(p[8])) {
            cur = new_token(TK_CONTINUE, cur, p);
            cur->len = 8;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 8;
            continue;
        }

        if (strncmp(p, "switch", 6) == 0 && !is_alnum(p[6])) {
            cur = new_token(TK_SWITCH, cur, p);
            cur->len = 6;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 6;
            continue;
        }

        if (strncmp(p, "case", 4) == 0 && !is_alnum(p[4])) {
            cur = new_token(TK_CASE, cur, p);
            cur->len = 4;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 4;
            continue;
        }

        if (strncmp(p, "default", 7) == 0 && !is_alnum(p[7])) {
            cur = new_token(TK_DEFAULT, cur, p);
            cur->len = 7;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 7;
            continue;
        }

        if (strncmp(p, "int", 3) == 0 && !is_alnum(p[3])) {
            cur = new_token(TK_INT, cur, p);
            cur->len = 3;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 3;
            continue;
        }

        if (strncmp(p, "char", 4) == 0 && !is_alnum(p[4])) {
            cur = new_token(TK_CHAR, cur, p);
            cur->len = 4;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 4;
            continue;
        }

        if (strncmp(p, "void", 4) == 0 && !is_alnum(p[4])) {
            cur = new_token(TK_VOID, cur, p);
            cur->len = 4;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 4;
            continue;
        }

        if (strncmp(p, "sizeof", 6) == 0 && !is_alnum(p[6])) {
            cur = new_token(TK_SIZEOF, cur, p);
            cur->len = 6;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 6;
            continue;
        }

        if (strncmp(p, "enum", 4) == 0 && !is_alnum(p[4])) {
            cur = new_token(TK_ENUM, cur, p);
            cur->len = 4;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 4;
            continue;
        }

        if (strncmp(p, "struct", 6) == 0 && !is_alnum(p[6])) {
            cur = new_token(TK_STRUCT, cur, p);
            cur->len = 6;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 6;
            continue;
        }

        if (strncmp(p, "typedef", 7) == 0 && !is_alnum(p[7])) {
            cur = new_token(TK_TYPEDEF, cur, p);
            cur->len = 7;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 7;
            continue;
        }

        if (strncmp(p, "extern", 6) == 0 && !is_alnum(p[6])) {
            cur = new_token(TK_EXTERN, cur, p);
            cur->len = 6;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 6;
            continue;
        }

        if (strncmp(p, ">>=", 3) == 0 ||
            strncmp(p, "<<=", 3) == 0) {
            cur = new_token(TK_RESERVED, cur, p);
            cur->len = 3;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 3;
            continue;
        }

        if (strncmp(p, ">=", 2) == 0 ||
            strncmp(p, "<=", 2) == 0 ||
            strncmp(p, "==", 2) == 0 ||
            strncmp(p, "!=", 2) == 0 ||
            strncmp(p, "||", 2) == 0 ||
            strncmp(p, "&&", 2) == 0 ||
            strncmp(p, "<<", 2) == 0 ||
            strncmp(p, ">>", 2) == 0 ||
            strncmp(p, "+=", 2) == 0 ||
            strncmp(p, "-=", 2) == 0 ||
            strncmp(p, "*=", 2) == 0 ||
            strncmp(p, "/=", 2) == 0 ||
            strncmp(p, "%=", 2) == 0 ||
            strncmp(p, "&=", 2) == 0 ||
            strncmp(p, "^=", 2) == 0 ||
            strncmp(p, "|=", 2) == 0 ||
            strncmp(p, "++", 2) == 0 ||
            strncmp(p, "--", 2) == 0 ||
            strncmp(p, "->", 2) == 0) {
            cur = new_token(TK_RESERVED, cur, p);
            cur->len = 2;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p += 2;
            continue;
        }

        if (*p == '+' || *p == '-' ||
            *p == '*' || *p == '/' ||
            *p == '(' || *p == ')' ||
            *p == '<' || *p == '>' ||
            *p == ';' || *p == '=' ||
            *p == '{' || *p == '}' ||
            *p == ',' || *p == '&' ||
            *p == '[' || *p == ']' ||
            *p == '|' || *p == '^' ||
            *p == '&' || *p == '%' ||
            *p == '!' || *p == '~' ||
            *p == '?' || *p == ':' ||
            *p == '.') {
            cur = new_token(TK_RESERVED, cur, p++);
            cur->len = 1;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            continue;
        }

        if (*p == '\'') { // 文字リテラル
                          // TODO:エスケープ
            cur = new_token(TK_NUM, cur, p);
            if ((*(p + 1)) == '\\') {
                switch (*(p + 2)) {
                case 'n':
                    cur->val = '\n';
                    break;
                default:
                    break;
                }
                if (*(p + 3) != '\'')
                    error_at(p, "不正な文字リテラルです");
                p += 4;
            } else {
                cur->val = *(p + 1);
                if (*(p + 2) != '\'')
                    error_at(p, "不正な文字リテラルです");
                p += 3;
            }
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            continue;
        }

        // 識別子
        char *q = p;
        while (is_alnum(*q) && !(q == p && '0' <= *q && *q <= '9')) {
            q++;
        }
        if (q > p) {
            cur = new_token(TK_IDENT, cur, p);
            cur->len = q - p;
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            p = q;
            continue;
        }

        if (isdigit(*p)) {
            cur = new_token(TK_NUM, cur, p);
            cur->val = strtol(p, &p, 10);
            cur->is_linehead = is_linehead;
            cur->linenumber = linenumber;
            is_linehead = 0;
            continue;
        }

        if (token == NULL) {
            error_at(p, "トークナイズできません");
        }
        error_at(token->str, "トークナイズできません");
    }

    new_token(TK_EOF, cur, p);
    token = head->next;
}

/*
 * ######## #### ##    ## ########
 * ##        ##  ###   ## ##     ##
 * ##        ##  ####  ## ##     ##
 * ######    ##  ## ## ## ##     ##
 * ##        ##  ##  #### ##     ##
 * ##        ##  ##   ### ##     ##
 * ##       #### ##    ## ########
 *
 * ######## ##     ## ##    ##  ######   ######
 * ##       ##     ## ###   ## ##    ## ##    ##
 * ##       ##     ## ####  ## ##       ##
 * ######   ##     ## ## ## ## ##        ######
 * ##       ##     ## ##  #### ##             ##
 * ##       ##     ## ##   ### ##    ## ##    ##
 * ##        #######  ##    ##  ######   ######
 */

// 変数を名前で検索する。見つからなかった場合はNULLを返す。
LVar *find_lvar(Token *tok) {
    LVar *var;
    for (var = locals; var; var = var->next)
        if (var->len == tok->len && !memcmp(tok->str, var->name, var->len))
            return var;
    return NULL;
}

// 変数を名前で検索する。見つからなかった場合はNULLを返す。
GVar *find_gvar(Token *tok) {
    GVar *var;
    for (var = globals; var; var = var->next)
        if (var->len == tok->len && !memcmp(tok->str, var->name, var->len))
            return var;
    return NULL;
}

// 定義されたenumを名前で検索する。見つからなかった場合はNULLを返す。
EnumName *find_enum(Token *tok) {
    EnumName *var;
    for (var = enumnames; var; var = var->next)
        if (var->len == tok->len && !memcmp(tok->str, var->name, var->len))
            return var;
    return NULL;
}

// 定義されたstructを名前で検索する。見つからなかった場合はNULLを返す。
StructDef *find_struct(Token *tok) {
    StructDef *var;
    for (var = structdefs; var; var = var->next)
        if (var->len == tok->len && !memcmp(tok->str, var->name, var->len))
            return var;
    return NULL;
}

// 定義された型を名前で検索する。見つからなかった場合はNULLを返す。
DefinedType *find_dtype(Token *tok) {
    DefinedType *var;
    for (var = definedtypes; var; var = var->next)
        if (var->len == tok->len && !memcmp(tok->str, var->name, var->len))
            return var;
    return NULL;
}

/*
 *  ######  ######## ######## ######## #### ##    ##  ######
 * ##    ## ##          ##       ##     ##  ###   ## ##    ##
 * ##       ##          ##       ##     ##  ####  ## ##
 *  ######  ######      ##       ##     ##  ## ## ## ##   ####
 *       ## ##          ##       ##     ##  ##  #### ##    ##
 * ##    ## ##          ##       ##     ##  ##   ### ##    ##
 *  ######  ########    ##       ##    #### ##    ##  ######
 *
 * ######## ##    ## ########  ########  ######
 *    ##     ##  ##  ##     ## ##       ##    ##
 *    ##      ####   ##     ## ##       ##
 *    ##       ##    ########  ######    ######
 *    ##       ##    ##        ##             ##
 *    ##       ##    ##        ##       ##    ##
 *    ##       ##    ##        ########  ######
 */

Node *new_node(NodeKind kind, Node *lhs, Node *rhs) {
    Node *node = calloc(1, sizeof(Node));
    node->srctoken = token;
    Type *now;
    node->kind = kind;
    node->lhs = lhs;
    node->rhs = rhs;

    if (kind == ND_STRREF) {
        Type *lhstype = estimate_type(lhs);
        // if (!lhstype || lhstype->ty != STRUCT) error_at(node->name, "左辺がstructではありません");
        if (!lhstype || lhstype->ty != STRUCT)
            error_at(node->srctoken->str, "左辺がstructではありません");

        now = lhstype->member;
        for (;;) {
            if (!now)
                error_at(node->srctoken->str, "structのメンバ名が存在しません");
            if (now->ty != MEMBER)
                error_at(node->srctoken->str, "不正な構文木:member");
            if (now->len == node->rhs->val && !memcmp(node->rhs->name, now->name, now->len))
                break;
            now = now->member;
        }
        node->type = now->ptr_to;
        return node;
    }

    Type *ltype = lhs ? lhs->type : NULL;
    Type *rtype = rhs ? rhs->type : NULL;

    // 関数型は返り値の型に暗黙キャスト
    if (ltype && ltype->ty == FUNC)
        ltype = ltype->ptr_to;
    if (rtype && rtype->ty == FUNC)
        rtype = rtype->ptr_to;

    // 3項演算子の時はltypeではない
    if (kind == ND_COND) {
        node->type = rtype;
        return node;
    }

    if (!ltype) {
        node->type = rtype;
    } else if (!rtype) {
        node->type = ltype;
    } else {
        node->type = ltype;
        // TODO:ここで型のチェックor暗黙キャスト
        if (ltype->ty != rtype->ty) {
            if (ltype->ty == PTR || ltype->ty == ARRAY)
                ;
            else if (ltype->ty == INT) {
                if (rtype->ty == PTR || rtype->ty == ARRAY)
                    node->type = rtype;
            } else if (ltype->ty == CHAR) {
                if (rtype->ty == PTR || rtype->ty == ARRAY || rtype->ty == INT)
                    node->type = rtype;
            } else {
                char name[100];
                sprintf(name, "両辺の型が一致しません:%d,%d  ", ltype->ty, rtype->ty);
                error_at(node->srctoken->str, name);
                // error_at(node->srctoken->str, "両辺の型が一致しません");
            }
        }
    }

    // 配列の暗黙ポインタキャスト
    if (node->type && node->type->ty == ARRAY && (node->kind == ND_ADD || node->kind == ND_SUB)) {
        Type *new = calloc(1, sizeof(Type));
        new->ty = PTR;
        new->ptr_to = node->type->ptr_to;
        node->type = new;
    }

    if (kind == ND_DEREF)
        node->type = node->type->ptr_to;
    if (kind == ND_ADDR) {
        now = calloc(1, sizeof(Type));
        now->ty = PTR;
        now->ptr_to = node->type;
        node->type = now;
    }
    return node;
}

Node *new_node_num(int val) {
    Node *node = calloc(1, sizeof(Node));
    node->srctoken = token;
    node->kind = ND_NUM;
    node->val = val;

    Type *type = calloc(1, sizeof(type));
    type->ty = INT;
    node->type = type;
    return node;
}

/*
 * ######## ########  ##    ## ########
 * ##       ##     ## ###   ## ##
 * ##       ##     ## ####  ## ##
 * ######   ########  ## ## ## ######
 * ##       ##     ## ##  #### ##
 * ##       ##     ## ##   ### ##
 * ######## ########  ##    ## ##
 *
 * ########     ###    ########   ######  ######## ########
 * ##     ##   ## ##   ##     ## ##    ## ##       ##     ##
 * ##     ##  ##   ##  ##     ## ##       ##       ##     ##
 * ########  ##     ## ########   ######  ######   ########
 * ##        ######### ##   ##         ## ##       ##   ##
 * ##        ##     ## ##    ##  ##    ## ##       ##    ##
 * ##        ##     ## ##     ##  ######  ######## ##     ##
 */

void program() {
    int i = 0;
    while (!at_eof()) {
        locals = NULL;
        localsnum = 0;
        scopelayer_now = 0;
        localsnum_max = 0;
        code[i] = function_gval();
        localsnums[i] = (localsnum_max > localsnum ? localsnum_max : localsnum);
        LocalsList[i] = locals;
        i++;
    }
    code[i] = NULL;
}

Node *define_enum() {
    Token *first = token;
    Node *node;
    node = calloc(1, sizeof(Node));
    node->srctoken = token;
    if (consume_kind(TK_ENUM)) {
        node->kind = ND_ENUM;
        int num = 0;

        Token *tok = consume_kind(TK_IDENT);
        if (!tok) {
            // 無名enumに対応
            // error_at(token->str, "enumの名前がありません");
        } else {

            node->name = tok->str;
            node->val = tok->len;

            EnumName *ename = find_enum(tok);
            if (ename) {
                // TODO:enumの前方宣言
                // error_at(tok->str, "重複定義されたenumです");
                token = first;
                return NULL;
            }

            ename = calloc(1, sizeof(EnumName));
            ename->next = enumnames;
            ename->name = tok->str;
            ename->len = tok->len;
            enumnames = ename;
        }

        expect("{");
        for (;;) {
            if (consume("}"))
                break;

            tok = consume_kind(TK_IDENT);
            if (!tok)
                error_at(token->str, "enumの要素が識別子ではありません");

            Constant *cons = calloc(1, sizeof(Constant));
            cons->name = tok->str;
            cons->len = tok->len;
            cons->val = num;
            num++;
            cons->next = constants;
            constants = cons;
            if (consume(",")) {
                //
            } else {
                expect("}");
                break;
            }
        }
        // enumはINT
        Type *type = calloc(1, sizeof(Type));
        type->ty = INT;
        node->type = type;
        return node;
    }
    return NULL;
}

Node *define_struct() {
    Token *first = token;
    Node *node;
    node = calloc(1, sizeof(Node));
    node->srctoken = token;
    if (consume_kind(TK_STRUCT)) {
        node->kind = ND_STRUCT;
        int num = 0;

        Type *type = calloc(1, sizeof(Type));
        type->ty = STRUCT;

        Token *tok = consume_kind(TK_IDENT);
        if (!tok)
            // TODO:無名struct,未検証
            error_at(token->str, "structの名前がありません");

        node->name = tok->str;
        node->val = tok->len;
        StructDef *strc = find_struct(tok);
        if (strc && strc->is_defined) {
            // error_at(tok->str, "重複定義されたstructです");
            token = first;
            return NULL;
        }

        if (!strc) {
            strc = calloc(1, sizeof(StructDef));
            strc->next = structdefs;
            strc->name = tok->str;
            strc->len = tok->len;
            strc->type = type;
            strc->is_defined = 1;
            structdefs = strc;
        } else {               // structの前方宣言(typedefを先に置く)
            type = strc->type; // 既存のtypeにmember情報を追加
            strc->is_defined = 1;
        }

        node->type = type;

        if (!consume("{")) { // structの前方宣言(typedefを先に置く)
            strc->is_defined = 0;
            return node;
        }

        for (;;) { // TODO:char等があったときアライメントする
            if (consume("}"))
                break;

            Node *typedidentnode = consume_typed_ident(NULL);

            if (typedidentnode == NULL)
                error_at(token->str, "structのメンバ名がありません");

            Type *membertype = typedidentnode->type;

            if (typedidentnode->name == NULL)
                error_at(token->str, "structのメンバ名が識別子ではありません");

            tok = calloc(1, sizeof(Token));
            tok->str = typedidentnode->name;
            tok->len = typedidentnode->val;

            Type *member = calloc(1, sizeof(Type));
            member->ty = MEMBER;
            member->ptr_to = membertype;
            member->name = tok->str;
            member->len = tok->len;
            type->member = member;
            type = member;

            expect(";");
        }
        return node;
    }
    return NULL;
}

Node *function_gval() {
    Node *node;
    node = calloc(1, sizeof(Node));
    node->srctoken = token;

    Type *type;

    if (consume_kind(TK_EXTERN)) { // externグローバル変数定義
        Node *typedidentnode = consume_typed_ident(NULL);

        type = typedidentnode->type;

        if (typedidentnode->name == NULL)
            error_at(token->str, "extern変数の名前がありません");

        Token *externname = calloc(1, sizeof(Token));
        externname->str = typedidentnode->name;
        externname->len = typedidentnode->val;

        node->kind = ND_EXTERN;
        node->name = externname->str;
        node->val = externname->len;

        Token *tok = externname;
        int size = 1;
        GVar *gvar;

        int already = 0;
        if (tok) {
            gvar = find_gvar(tok);
            if (gvar)
                already = 1;

            while (consume("[")) { // 配列型
                Type *t = calloc(1, sizeof(Type));
                t->ty = ARRAY;
                t->ptr_to = type;
                type = t;
